--- a/Orbiters/Assembly-CSharp.csproj
+++ b/Orbiters/Assembly-CSharp.csproj
@@ -64,9 +64,11 @@
   <ItemGroup>
     <Compile Include="Assets\Planet Centric Scripts\BodySimulationEngine.cs" />
     <Compile Include="Assets\Planet Centric Scripts\CelestialBody.cs" />
+    <Compile Include="Assets\Planet Centric Scripts\HierarchyHelpers.cs" />
     <Compile Include="Assets\Planet Centric Scripts\OrbitDebug.cs" />
     <Compile Include="Assets\Planet Centric Scripts\PlanetGen.cs" />
     <Compile Include="Assets\Planet Centric Scripts\UniverseGlobals.cs" />
+    <Compile Include="Assets\PlayerController.cs" />
     <Compile Include="Assets\Sun Centric Scripts\CameraFollow.cs" />
     <Compile Include="Assets\Sun Centric Scripts\Celestial.cs" />
     <Compile Include="Assets\Sun Centric Scripts\GeneratePlanets.cs" />
